# TestTrackingOCV

./: CMakeLists.txt  TestTrackingOCV.sln  settings.yaml
TestTrackingOCV/: CameraPoseProvider.cpp  CameraPoseProvider.h  CameraPoseProviderTXT.cpp  CameraPoseProviderTXT.h  DynamicTrajectoryEstimator.cpp  DynamicTrajectoryEstimator.h  PropertySheet.props  ReadMe.txt  SnavelyReprojectionError.h  TestProgram.cpp  TestProgram.h  TestTrackingOCV.cpp  TestTrackingOCV.vcxproj  TestTrackingOCV.vcxproj.filters  Track.cpp  Track.h  TrackBuilder.cpp  TrackBuilder.h  TrackedPoint.cpp  TrackedPoint.h  Tracker.cpp  Tracker.h  TrajectoryArchiver.cpp  TrajectoryArchiver.h  TriangulateError.h  stdafx.cpp  stdafx.h
converter/: video2img.py
demos/: finalPointsTypes_duo1.avi  finalPointsTypes_uno1.avi
matlab/: rigid_body_kin.m
text/: IEEEtran.cls  bare_conf.tex  dslam.bib
